tests/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement
Rule 3     bloc -> statement
Rule 4     statement -> RETURN expression SEMI
Rule 5     statement -> NAME EQUALS expression SEMI
Rule 6     statement -> NAME EQUALS expression
Rule 7     statement -> WHILE expression RACC bloc LACC
Rule 8     statement -> FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
Rule 9     statement -> COMMENTS
Rule 10    statement -> IF expression THEN statement
Rule 11    statement -> IF expression THEN RACC bloc LACC
Rule 12    statement -> IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
Rule 13    statement -> IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
Rule 14    statement -> PRINT LPAREN expression RPAREN SEMI
Rule 15    statement -> PRINT STRING SEMI
Rule 16    params -> NAME
Rule 17    params -> NAME COMMA params
Rule 18    statement -> FUNCTION NAME LPAREN RPAREN START bloc END
Rule 19    statement -> FUNCTION NAME LPAREN params RPAREN START bloc END
Rule 20    statement -> NAME LPAREN RPAREN SEMI
Rule 21    statement -> NAME LPAREN param_call RPAREN SEMI
Rule 22    param_call -> expression
Rule 23    param_call -> expression COMMA param_call
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression TIMES expression
Rule 27    expression -> expression DIVIDE expression
Rule 28    expression -> expression or expression
Rule 29    expression -> expression and expression
Rule 30    expression -> expression SUP expression
Rule 31    expression -> expression INFF expression
Rule 32    expression -> expression ISEQUAL expression
Rule 33    expression -> expression NOTEQUAL expression
Rule 34    expression -> expression ET expression
Rule 35    expression -> expression OU expression
Rule 36    statement -> NAME INCR SEMI
Rule 37    statement -> NAME DECR SEMI
Rule 38    statement -> NAME INCR
Rule 39    statement -> NAME DECR
Rule 40    statement -> NAME PLUSEQ NUMBER SEMI
Rule 41    statement -> NAME MINEQ NUMBER SEMI
Rule 42    statement -> NAME PLUSEQ NUMBER
Rule 43    statement -> NAME MINEQ NUMBER
Rule 44    expression -> MINUS expression
Rule 45    expression -> LPAREN expression RPAREN
Rule 46    expression -> NUMBER
Rule 47    expression -> NAME

Terminals, with rules where they appear

COMMA                : 8 17 23
COMMENT              : 
COMMENTS             : 9
DECR                 : 37 39
DIVIDE               : 27
ELSE                 : 12 13
ELSEIF               : 12
END                  : 18 19
EQUALS               : 5 6
ET                   : 34
FOR                  : 8
FUNCTION             : 18 19
IF                   : 10 11 12 13
INCR                 : 36 38
INFF                 : 31
ISEQUAL              : 32
LACC                 : 7 8 11 12 12 12 13 13
LPAREN               : 8 14 18 19 20 21 45
MINEQ                : 41 43
MINUS                : 25 44
NAME                 : 5 6 16 17 18 19 20 21 36 37 38 39 40 41 42 43 47
NOTEQUAL             : 33
NUMBER               : 8 40 41 42 43 46
OU                   : 35
PLUS                 : 24
PLUSEQ               : 40 42
PRINT                : 14 15
RACC                 : 7 8 11 12 12 12 13 13
RETURN               : 4
RPAREN               : 8 14 18 19 20 21 45
SEMI                 : 4 5 14 15 20 21 36 37 40 41
START                : 18 19
STRING               : 15
SUP                  : 30
THEN                 : 10 11 12 12 13
TIMES                : 26
TO                   : 8
WHILE                : 7
and                  : 29
error                : 
or                   : 28

Nonterminals, with rules where they appear

bloc                 : 1 2 7 8 11 12 12 12 13 13 18 19
expression           : 4 5 6 7 10 11 12 12 13 14 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 44 45
param_call           : 21 23
params               : 17 19
start                : 0
statement            : 2 3 8 8 10

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement
    (3) bloc -> . statement
    (4) statement -> . RETURN expression SEMI
    (5) statement -> . NAME EQUALS expression SEMI
    (6) statement -> . NAME EQUALS expression
    (7) statement -> . WHILE expression RACC bloc LACC
    (8) statement -> . FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
    (9) statement -> . COMMENTS
    (10) statement -> . IF expression THEN statement
    (11) statement -> . IF expression THEN RACC bloc LACC
    (12) statement -> . IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (13) statement -> . IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (14) statement -> . PRINT LPAREN expression RPAREN SEMI
    (15) statement -> . PRINT STRING SEMI
    (18) statement -> . FUNCTION NAME LPAREN RPAREN START bloc END
    (19) statement -> . FUNCTION NAME LPAREN params RPAREN START bloc END
    (20) statement -> . NAME LPAREN RPAREN SEMI
    (21) statement -> . NAME LPAREN param_call RPAREN SEMI
    (36) statement -> . NAME INCR SEMI
    (37) statement -> . NAME DECR SEMI
    (38) statement -> . NAME INCR
    (39) statement -> . NAME DECR
    (40) statement -> . NAME PLUSEQ NUMBER SEMI
    (41) statement -> . NAME MINEQ NUMBER SEMI
    (42) statement -> . NAME PLUSEQ NUMBER
    (43) statement -> . NAME MINEQ NUMBER

    RETURN          shift and go to state 4
    NAME            shift and go to state 5
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    COMMENTS        shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    FUNCTION        shift and go to state 11

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement
    (4) statement -> . RETURN expression SEMI
    (5) statement -> . NAME EQUALS expression SEMI
    (6) statement -> . NAME EQUALS expression
    (7) statement -> . WHILE expression RACC bloc LACC
    (8) statement -> . FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
    (9) statement -> . COMMENTS
    (10) statement -> . IF expression THEN statement
    (11) statement -> . IF expression THEN RACC bloc LACC
    (12) statement -> . IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (13) statement -> . IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (14) statement -> . PRINT LPAREN expression RPAREN SEMI
    (15) statement -> . PRINT STRING SEMI
    (18) statement -> . FUNCTION NAME LPAREN RPAREN START bloc END
    (19) statement -> . FUNCTION NAME LPAREN params RPAREN START bloc END
    (20) statement -> . NAME LPAREN RPAREN SEMI
    (21) statement -> . NAME LPAREN param_call RPAREN SEMI
    (36) statement -> . NAME INCR SEMI
    (37) statement -> . NAME DECR SEMI
    (38) statement -> . NAME INCR
    (39) statement -> . NAME DECR
    (40) statement -> . NAME PLUSEQ NUMBER SEMI
    (41) statement -> . NAME MINEQ NUMBER SEMI
    (42) statement -> . NAME PLUSEQ NUMBER
    (43) statement -> . NAME MINEQ NUMBER

    $end            reduce using rule 1 (start -> bloc .)
    RETURN          shift and go to state 4
    NAME            shift and go to state 5
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    COMMENTS        shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    FUNCTION        shift and go to state 11

    statement                      shift and go to state 12

state 3

    (3) bloc -> statement .

    RETURN          reduce using rule 3 (bloc -> statement .)
    NAME            reduce using rule 3 (bloc -> statement .)
    WHILE           reduce using rule 3 (bloc -> statement .)
    FOR             reduce using rule 3 (bloc -> statement .)
    COMMENTS        reduce using rule 3 (bloc -> statement .)
    IF              reduce using rule 3 (bloc -> statement .)
    PRINT           reduce using rule 3 (bloc -> statement .)
    FUNCTION        reduce using rule 3 (bloc -> statement .)
    $end            reduce using rule 3 (bloc -> statement .)
    LACC            reduce using rule 3 (bloc -> statement .)
    END             reduce using rule 3 (bloc -> statement .)


state 4

    (4) statement -> RETURN . expression SEMI
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 14
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 17

    expression                     shift and go to state 13

state 5

    (5) statement -> NAME . EQUALS expression SEMI
    (6) statement -> NAME . EQUALS expression
    (20) statement -> NAME . LPAREN RPAREN SEMI
    (21) statement -> NAME . LPAREN param_call RPAREN SEMI
    (36) statement -> NAME . INCR SEMI
    (37) statement -> NAME . DECR SEMI
    (38) statement -> NAME . INCR
    (39) statement -> NAME . DECR
    (40) statement -> NAME . PLUSEQ NUMBER SEMI
    (41) statement -> NAME . MINEQ NUMBER SEMI
    (42) statement -> NAME . PLUSEQ NUMBER
    (43) statement -> NAME . MINEQ NUMBER

    EQUALS          shift and go to state 18
    LPAREN          shift and go to state 19
    INCR            shift and go to state 20
    DECR            shift and go to state 21
    PLUSEQ          shift and go to state 22
    MINEQ           shift and go to state 23


state 6

    (7) statement -> WHILE . expression RACC bloc LACC
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 14
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 17

    expression                     shift and go to state 24

state 7

    (8) statement -> FOR . LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC

    LPAREN          shift and go to state 25


state 8

    (9) statement -> COMMENTS .

    RETURN          reduce using rule 9 (statement -> COMMENTS .)
    NAME            reduce using rule 9 (statement -> COMMENTS .)
    WHILE           reduce using rule 9 (statement -> COMMENTS .)
    FOR             reduce using rule 9 (statement -> COMMENTS .)
    COMMENTS        reduce using rule 9 (statement -> COMMENTS .)
    IF              reduce using rule 9 (statement -> COMMENTS .)
    PRINT           reduce using rule 9 (statement -> COMMENTS .)
    FUNCTION        reduce using rule 9 (statement -> COMMENTS .)
    $end            reduce using rule 9 (statement -> COMMENTS .)
    TO              reduce using rule 9 (statement -> COMMENTS .)
    LACC            reduce using rule 9 (statement -> COMMENTS .)
    END             reduce using rule 9 (statement -> COMMENTS .)
    RPAREN          reduce using rule 9 (statement -> COMMENTS .)


state 9

    (10) statement -> IF . expression THEN statement
    (11) statement -> IF . expression THEN RACC bloc LACC
    (12) statement -> IF . expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (13) statement -> IF . expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 14
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 17

    expression                     shift and go to state 26

state 10

    (14) statement -> PRINT . LPAREN expression RPAREN SEMI
    (15) statement -> PRINT . STRING SEMI

    LPAREN          shift and go to state 27
    STRING          shift and go to state 28


state 11

    (18) statement -> FUNCTION . NAME LPAREN RPAREN START bloc END
    (19) statement -> FUNCTION . NAME LPAREN params RPAREN START bloc END

    NAME            shift and go to state 29


state 12

    (2) bloc -> bloc statement .

    RETURN          reduce using rule 2 (bloc -> bloc statement .)
    NAME            reduce using rule 2 (bloc -> bloc statement .)
    WHILE           reduce using rule 2 (bloc -> bloc statement .)
    FOR             reduce using rule 2 (bloc -> bloc statement .)
    COMMENTS        reduce using rule 2 (bloc -> bloc statement .)
    IF              reduce using rule 2 (bloc -> bloc statement .)
    PRINT           reduce using rule 2 (bloc -> bloc statement .)
    FUNCTION        reduce using rule 2 (bloc -> bloc statement .)
    $end            reduce using rule 2 (bloc -> bloc statement .)
    LACC            reduce using rule 2 (bloc -> bloc statement .)
    END             reduce using rule 2 (bloc -> bloc statement .)


state 13

    (4) statement -> RETURN expression . SEMI
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . TIMES expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . or expression
    (29) expression -> expression . and expression
    (30) expression -> expression . SUP expression
    (31) expression -> expression . INFF expression
    (32) expression -> expression . ISEQUAL expression
    (33) expression -> expression . NOTEQUAL expression
    (34) expression -> expression . ET expression
    (35) expression -> expression . OU expression

    SEMI            shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    or              shift and go to state 35
    and             shift and go to state 36
    SUP             shift and go to state 37
    INFF            shift and go to state 38
    ISEQUAL         shift and go to state 39
    NOTEQUAL        shift and go to state 40
    ET              shift and go to state 41
    OU              shift and go to state 42


state 14

    (44) expression -> MINUS . expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 14
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 17

    expression                     shift and go to state 43

state 15

    (45) expression -> LPAREN . expression RPAREN
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 14
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 17

    expression                     shift and go to state 44

state 16

    (46) expression -> NUMBER .

    SEMI            reduce using rule 46 (expression -> NUMBER .)
    PLUS            reduce using rule 46 (expression -> NUMBER .)
    MINUS           reduce using rule 46 (expression -> NUMBER .)
    TIMES           reduce using rule 46 (expression -> NUMBER .)
    DIVIDE          reduce using rule 46 (expression -> NUMBER .)
    or              reduce using rule 46 (expression -> NUMBER .)
    and             reduce using rule 46 (expression -> NUMBER .)
    SUP             reduce using rule 46 (expression -> NUMBER .)
    INFF            reduce using rule 46 (expression -> NUMBER .)
    ISEQUAL         reduce using rule 46 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 46 (expression -> NUMBER .)
    ET              reduce using rule 46 (expression -> NUMBER .)
    OU              reduce using rule 46 (expression -> NUMBER .)
    RACC            reduce using rule 46 (expression -> NUMBER .)
    THEN            reduce using rule 46 (expression -> NUMBER .)
    RPAREN          reduce using rule 46 (expression -> NUMBER .)
    RETURN          reduce using rule 46 (expression -> NUMBER .)
    NAME            reduce using rule 46 (expression -> NUMBER .)
    WHILE           reduce using rule 46 (expression -> NUMBER .)
    FOR             reduce using rule 46 (expression -> NUMBER .)
    COMMENTS        reduce using rule 46 (expression -> NUMBER .)
    IF              reduce using rule 46 (expression -> NUMBER .)
    PRINT           reduce using rule 46 (expression -> NUMBER .)
    FUNCTION        reduce using rule 46 (expression -> NUMBER .)
    $end            reduce using rule 46 (expression -> NUMBER .)
    TO              reduce using rule 46 (expression -> NUMBER .)
    LACC            reduce using rule 46 (expression -> NUMBER .)
    END             reduce using rule 46 (expression -> NUMBER .)
    COMMA           reduce using rule 46 (expression -> NUMBER .)


state 17

    (47) expression -> NAME .

    SEMI            reduce using rule 47 (expression -> NAME .)
    PLUS            reduce using rule 47 (expression -> NAME .)
    MINUS           reduce using rule 47 (expression -> NAME .)
    TIMES           reduce using rule 47 (expression -> NAME .)
    DIVIDE          reduce using rule 47 (expression -> NAME .)
    or              reduce using rule 47 (expression -> NAME .)
    and             reduce using rule 47 (expression -> NAME .)
    SUP             reduce using rule 47 (expression -> NAME .)
    INFF            reduce using rule 47 (expression -> NAME .)
    ISEQUAL         reduce using rule 47 (expression -> NAME .)
    NOTEQUAL        reduce using rule 47 (expression -> NAME .)
    ET              reduce using rule 47 (expression -> NAME .)
    OU              reduce using rule 47 (expression -> NAME .)
    RACC            reduce using rule 47 (expression -> NAME .)
    THEN            reduce using rule 47 (expression -> NAME .)
    RPAREN          reduce using rule 47 (expression -> NAME .)
    RETURN          reduce using rule 47 (expression -> NAME .)
    NAME            reduce using rule 47 (expression -> NAME .)
    WHILE           reduce using rule 47 (expression -> NAME .)
    FOR             reduce using rule 47 (expression -> NAME .)
    COMMENTS        reduce using rule 47 (expression -> NAME .)
    IF              reduce using rule 47 (expression -> NAME .)
    PRINT           reduce using rule 47 (expression -> NAME .)
    FUNCTION        reduce using rule 47 (expression -> NAME .)
    $end            reduce using rule 47 (expression -> NAME .)
    TO              reduce using rule 47 (expression -> NAME .)
    LACC            reduce using rule 47 (expression -> NAME .)
    END             reduce using rule 47 (expression -> NAME .)
    COMMA           reduce using rule 47 (expression -> NAME .)


state 18

    (5) statement -> NAME EQUALS . expression SEMI
    (6) statement -> NAME EQUALS . expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 14
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 16
    NAME            shift and go to state 17

    expression                     shift and go to state 45

state 19
